--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-dropzone": "^14.3.8",
     "framer-motion": "^11.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-dropzone": "^14.3.8"
+    "sonner": "^1.0.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.24",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2",
     "vite": "^5.0.0"
   }
 }
